--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
     <meta http-equiv=”X-UA-Compatible” content=”ie=edge”>
 
-    <title>My Website [Name of the website]</title>
+    <title>Welcome to Bookshelf, Lexy's latest creation!</title>
 
   </head>
 
@@ -18,9 +18,9 @@
 
     <main>
 
-        <h1>Welcome to My Website [Name of the website]</h1>  
+        <h1>Welcome to Bookshelf, Lexy's latest creation!</h1>  
 
-        <p>This is my new website hosted on GitHub Pages!</p>
+        <p>Hopefully this will go up sometime in July? Est. release date is July 28th! Cheers guys!</p>
 
     </main>
 
