--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
 
     <title>Welcome to Bookshelf, Lexy's latest creation!</title>
 
+    <link rel="stylesheet" href="style.css">
+
   </head>
 
   <body>
