--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
     <meta http-equiv=”X-UA-Compatible” content=”ie=edge”>
 
-    <title>Welcome to Bookshelf, Lexy's latest creation!</title>
+    <title>Welcome to bookshelf, Lexy's latest creation!</title>
 
     <link rel="stylesheet" href="style.css">
 
